tests/ui/parser/suggest_misplaced_generics/trait.stderr
error: expected identifier, found `<`
  --> $DIR/trait.rs:5:6
   |
LL | trait<T> Foo {
   |      ^ expected identifier
   |
help: place the generic parameter name after the trait name
   |
LL - trait<T> Foo {
LL + trait Foo<T> {
   |

error: aborting due to previous error

